Added a word on notation, and will continue to write partial derivatives for synchronized hamiltonian.

--- a/Mean_Field.ipynb
+++ b/Mean_Field.ipynb
@@ -50,6 +50,12 @@
     "        '''\n",
     "        state_indices (list of integers): This list tells which states pertain to this agent. e.g. [1,2] would \n",
     "        tell us that states 1 and 2 pertain to this agent.\n",
+    "        \n",
+    "        A word on notation:  The notation used for the methods of the agent is:  \n",
+    "            - If it is a partial derivative: <denominator>_rhs_H_<type of hamiltonian (l, mf, or s)>_<nou or u>.  e.g., \n",
+    "            \"qp_rhs_H_l_u\" denotes the partial derivative with respect to q and p of the terms in the local Hamiltonian that contain control variables.\n",
+    "            - If it is a hamiltonian: H_<type of hamiltonian (l, mf, or s)>_<nou or u>.  e.g. \"H_mf_nou\" denotes the mean field hamiltonian\n",
+    "            with terms not containing u.\n",
     "        '''\n",
     "        self.state_indices = state_indices\n",
     "        self.control_indices = control_indices\n",
@@ -67,7 +73,7 @@
     "    def H_l_nou(self, q, p, lambda_l):\n",
     "        return \n",
     "\n",
-    "    def qp_rhs_l_nou(self, t, qp_vec, **kwargs):\n",
+    "    def qp_rhs_H_l_nou(self, t, qp_vec, **kwargs):\n",
     "        dim = len(qp_vec)/4\n",
     "        q = qp_vec[:dim]\n",
     "        p = qp_vec[dim:2*dim]\n",
@@ -82,7 +88,7 @@
     "        p_D_dot =  np.zeros(np.shape(q))\n",
     "        return np.concatenate([q_dot, p_dot, q_D_dot, p_D_dot])\n",
     "       \n",
-    "    def u_rhs_l_nou(self, t, u_vec, **kwargs):\n",
+    "    def u_rhs_H_l_nou(self, t, u_vec, **kwargs):\n",
     "        qp_vec = kwargs['qp_vec']\n",
     "        dim = len(qp_vec)/4\n",
     "        q = qp_vec[:dim]\n",
@@ -96,7 +102,7 @@
     "    def H_l_u(self, q, p, u):\n",
     "        return \n",
     "    \n",
-    "    def qp_rhs_l_u(self, t, qp_vec, **kwargs):\n",
+    "    def qp_rhs_H_l_u(self, t, qp_vec, **kwargs):\n",
     "        dim = len(qp_vec)/4\n",
     "        q = qp_vec[:dim]\n",
     "        p = qp_vec[dim:2*dim]\n",
@@ -111,7 +117,7 @@
     "        p_D_dot =  np.zeros(np.shape(q))\n",
     "        return np.concatenate([q_dot, p_dot, q_D_dot, p_D_dot])\n",
     "       \n",
-    "    def u_rhs_l_u(self, t, u_vec, **kwargs):\n",
+    "    def u_rhs_H_l_u(self, t, u_vec, **kwargs):\n",
     "        qp_vec = kwargs['qp_vec']\n",
     "        dim = len(qp_vec)/4\n",
     "        q = qp_vec[:dim]\n",
@@ -129,6 +135,7 @@
     "        return np.concatenate([q_dot, p_dot, q_D_dot, p_D_dot])\n",
     "       \n",
     "    def u_rhs_H_s(self, t, u_vec, **kwargs):\n",
+    "        # This will include a term for qp_rhs_l and a term for qp_rhs_MF: \n",
     "        return np.concatenate([q_dot, p_dot, q_D_dot, p_D_dot])\n",
     "        Gamma = kwargs['Gamma']\n",
     "        # for u-dot\n",
@@ -409,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 150,
    "metadata": {
     "collapsed": false
    },
@@ -420,7 +427,7 @@
        "{'p': {'1': 0, '2': 1}, 'q': {'1': 0, '2': 1}, 'u': {'1': 0, '2': 1}}"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 150,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -433,7 +440,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### What things we need in the blackboard:"
+    "### What things we need in the blackboard:"
    ]
   },
   {
