--- a/Mean_Field.ipynb
+++ b/Mean_Field.ipynb
@@ -46,7 +46,7 @@
    "source": [
     "class Agent:\n",
     "    \n",
-    "    def __init__(self, state_indices, control_indices):\n",
+    "    def __init__(self, mean_field, blackboad, state_indices, control_indices):\n",
     "        '''\n",
     "        state_indices (list of integers): This list tells which states pertain to this agent. e.g. [1,2] would \n",
     "        tell us that states 1 and 2 pertain to this agent.\n",
@@ -59,6 +59,8 @@
     "        '''\n",
     "        self.state_indices = state_indices\n",
     "        self.control_indices = control_indices\n",
+    "        self.mf = mean_field\n",
+    "        self.bb = blackboard\n",
     "        self.u_l_vec = None\n",
     "        self.qp_l_vec = None\n",
     "        self.u_l_dict = None\n",
@@ -84,8 +86,8 @@
     "        q_dot =  np.zeros(np.shape(p))\n",
     "        # for p-dot\n",
     "        p_dot =  np.zeros(np.shape(q))\n",
-    "        q_D_dot =  np.zeros(np.shape(p))\n",
-    "        p_D_dot =  np.zeros(np.shape(q))\n",
+    "        q_D_dot = np.zeros(np.shape(p))\n",
+    "        p_D_dot = np.zeros(np.shape(q))\n",
     "        return np.concatenate([q_dot, p_dot, q_D_dot, p_D_dot])\n",
     "       \n",
     "    def u_rhs_H_l_nou(self, t, u_vec, **kwargs):\n",
@@ -128,13 +130,28 @@
     "        # for u-dot\n",
     "        return -1*Gamma*np.zeros(np.shape(u_vec))\n",
     "\n",
-    "    def qp_rhs_H_s(self, t, qp_vec, **kwargs):\n",
+    "    def qp_rhs_H_s_nou(self, t, qp_vec, **kwargs):\n",
+    "        # This will include a term for qp_rhs_l and a term for qp_rhs_MF\n",
+    "        # kwargs should have quenched values\n",
+    "        qp_vec_quenched = self.bb.construct_q_p(qp_vec, self)\n",
+    "        # yes it is really slow, but we read from blackboard every time we evaluate this\n",
+    "        qp_rhs_H_s = (1-alpha)*self.qp_rhs_H_l_nou(qp_vec) + alpha*mf.qp_rhs_H_mf_nou(qp_vec)\n",
+    "        # must return result in qp_vec format because ode rk23 will call this\n",
+    "        # qp_rhs_H_s should look like this: np.concatenate([q_dot, p_dot, q_D_dot, p_D_dot])\n",
+    "        return qp_rhs_H_s\n",
+    "       \n",
+    "    def qp_rhs_H_s_u(self, t, qp_vec, **kwargs):\n",
     "        # This will include a term for qp_rhs_l and a term for qp_rhs_MF: \n",
-    "        qp_vec\n",
-    "        qp_rhs_H_s = (1-alpha)*qp_rhs_l(self, qp_vec)+alpha*qp_rhs_MF()\n",
+    "        qp_rhs_H_s = (1-alpha)*qp_rhs_l(self, qp_vec) + alpha*qp_rhs_MF()\n",
     "        return np.concatenate([q_dot, p_dot, q_D_dot, p_D_dot])\n",
     "       \n",
-    "    def u_rhs_H_s(self, t, u_vec, **kwargs):\n",
+    "    def u_rhs_H_s_nou(self, t, u_vec, **kwargs):\n",
+    "        # This will include a term for qp_rhs_l and a term for qp_rhs_MF: \n",
+    "        Gamma = kwargs['Gamma']\n",
+    "        # for u-dot\n",
+    "        return -1*Gamma*np.zeros(np.shape(u_vec))\n",
+    "\n",
+    "    def u_rhs_H_s_u(self, t, u_vec, **kwargs):\n",
     "        # This will include a term for qp_rhs_l and a term for qp_rhs_MF: \n",
     "        return np.concatenate([q_dot, p_dot, q_D_dot, p_D_dot])\n",
     "        Gamma = kwargs['Gamma']\n",
@@ -204,6 +221,38 @@
     "    def qp_rhs_H_MF_u(self, t, qp_vec, **kwargs):\n",
     "        pass\n",
     "          "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "class Synchronizer:\n",
+    "    \n",
+    "    def __init__(self, agents, blackboard):\n",
+    "        self.agents = agents # list of all agents\n",
+    "        self.bb = blackboard\n",
+    "    \n",
+    "    def synchronize():\n",
+    "        # run synchronization\n",
+    "        for agent in self.agents:\n",
+    "            '''     \n",
+    "            1) run local propagation\n",
+    "            2) run synchronized propagation\n",
+    "            3) run local propagation with combined control\n",
+    "\n",
+    "            For each of the above 3 steps:\n",
+    "                - create sliding window instance\n",
+    "                - call \"propagate_dynamics\" on the sliding window instance\n",
+    "                - \n",
+    "            get quenched values from blackboard\n",
+    "            ''' \n",
+    "            qp_vec = self.bb.construct_q_p(agent) # quench the necessary values to be quenched\n",
+    "            qp_vec = qp_rhs_H_s_nou(qp_vec)"
    ]
   },
   {
