Started to flesh out the class Synchronizer. I'm assuming there is only one propagation now (that is what it seems like after looking at flow chart).

--- a/Mean_Field.ipynb
+++ b/Mean_Field.ipynb
@@ -234,8 +234,8 @@
     "class Synchronizer:\n",
     "    \n",
     "    def __init__(self, agents, blackboard):\n",
-    "        self.agents = agents # list of all agents\n",
-    "        self.bb = blackboard\n",
+    "        self.agents = agents  # list of all agents.  list with elements of class Agent\n",
+    "        self.bb = blackboard  # instance of class blackboard  \n",
     "    \n",
     "    def synchronize():\n",
     "        # run synchronization\n",
@@ -243,12 +243,11 @@
     "            '''     \n",
     "            1) run local propagation\n",
     "            2) run synchronized propagation\n",
-    "            3) run local propagation with combined control\n",
     "\n",
-    "            For each of the above 3 steps:\n",
+    "            For each of the above 2 steps:\n",
     "                - create sliding window instance\n",
     "                - call \"propagate_dynamics\" on the sliding window instance\n",
-    "                - \n",
+    "\n",
     "            get quenched values from blackboard\n",
     "            ''' \n",
     "            qp_vec = self.bb.construct_q_p(agent) # quench the necessary values to be quenched\n",
@@ -264,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 154,
    "metadata": {
     "collapsed": false
    },
@@ -353,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 155,
    "metadata": {
     "collapsed": false
    },
@@ -373,12 +372,12 @@
     "myAgent.q_p_u_dict['u']['1']=0\n",
     "myAgent.q_p_u_dict['u']['2']=1\n",
     "\n",
-    "bb=Blackboard()\n"
+    "bb=Blackboard()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 156,
    "metadata": {
     "collapsed": false
    },
@@ -389,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 157,
    "metadata": {
     "collapsed": false
    },
@@ -400,7 +399,7 @@
        "{'p': {'1': 0, '2': 1}, 'q': {'1': 0, '2': 1}, 'u': {'1': 0, '2': 1}}"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 157,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -411,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 158,
    "metadata": {
     "collapsed": false
    },
@@ -432,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 159,
    "metadata": {
     "collapsed": false
    },
@@ -443,7 +442,7 @@
        "{'p': {'1': 0, '2': 1}, 'q': {'1': 0, '2': 1}, 'u': {'1': 0, '2': 1}}"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 159,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -454,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 160,
    "metadata": {
     "collapsed": false
    },
@@ -465,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 161,
    "metadata": {
     "collapsed": false
    },
@@ -476,7 +475,7 @@
        "{'p': {'1': 0, '2': 1}, 'q': {'1': 0, '2': 1}, 'u': {'1': 0, '2': 1}}"
       ]
      },
-     "execution_count": 150,
+     "execution_count": 161,
      "metadata": {},
      "output_type": "execute_result"
     }
