Changing the kwargs to include state_dim_l and state_dim_mf.

--- a/Mean_Field.ipynb
+++ b/Mean_Field.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 162,
    "metadata": {
     "collapsed": false
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 163,
    "metadata": {
     "collapsed": false
    },
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 166,
    "metadata": {
     "collapsed": false
    },
@@ -225,7 +225,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 176,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{2, 3, 5}"
+      ]
+     },
+     "execution_count": 176,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a=[3,5,2]\n",
+    "b=[2]\n",
+    "g=[a,b]\n",
+    "set([x for g_i in g for x in g_i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
    "metadata": {
     "collapsed": false
    },
@@ -241,15 +266,22 @@
     "        # run synchronization\n",
     "        for agent in self.agents:\n",
     "            '''     \n",
-    "            1) run local propagation\n",
-    "            2) run synchronized propagation\n",
+    "            1) run synchronized propagation - I think we only need one Agent instead of SlidingWindow now\n",
     "\n",
     "            For each of the above 2 steps:\n",
     "                - create sliding window instance\n",
     "                - call \"propagate_dynamics\" on the sliding window instance\n",
     "\n",
     "            get quenched values from blackboard\n",
-    "            ''' \n",
+    "            '''\n",
+    "            # determine dimensions of p_l and p_MF, and then create\n",
+    "            # dimensions of p_l are determined by number of states for this agent \n",
+    "            # dimensions of p_MF \n",
+    "            state_dim_l = len(agent.state_indices)\n",
+    "            # set difference between all states in all agents, and states in current agent\n",
+    "            state_dim_mf = set([agent_i.state_indices for agent_i in self.agents for agent_i.state_indices in agent_i]) - set(agent.state_indices)\n",
+    "            # run propagation with keyword arguments state_dim_l, state_dim_mf\n",
+    "            slid\n",
     "            qp_vec = self.bb.construct_q_p(agent) # quench the necessary values to be quenched\n",
     "            qp_vec = qp_rhs_H_s_nou(qp_vec)"
    ]
