sliding_window.py     - started removing references to q_D and p_D and q_D_dot and     p_D_dot because those are not needed any more (only initial     conditions needed)
Mean_Field.ipynb
    - started writing qp_rhs.  Made one assumption that user gives us
    qp_rhs_H_mf in the initialization of the mean field object.
    waiting for a response from Shen on wehther that is true.

--- a/Mean_Field.ipynb
+++ b/Mean_Field.ipynb
@@ -99,7 +99,7 @@
     "        p_D = qp_vec[3*dim:]\n",
     "        Gamma = kwargs['Gamma']\n",
     "        # for u-dot\n",
-    "        return -1*Gamma*np.zeros(np.shape(u_vec))\n",
+    "        returnurn -1*Gamma*np.zeros(np.shape(u_vec))\n",
     "\n",
     "    def H_l_u(self, q, p, u):\n",
     "        return \n",
@@ -166,6 +166,38 @@
     "        \n",
     "    def L_l_D_q_Dot():\n",
     "        pass\n",
+    "\n",
+    "    def qp_rhs(self, t, qp_vec, **kwargs):\n",
+    "        # \n",
+    "        q=qp_vec[]\n",
+    "        p=qp_vec[]\n",
+    "\n",
+    "        qp_rhs_H_mf = self.mf.qp_rhs_H_mf()\n",
+    "        p_rhs_H_mf = qp_rhs_H_mf[:state_dim]\n",
+    "        q_rhs_H_mf = qp_rhs_H_mf[state_dim:]\n",
+    "        \n",
+    "        qp_rhs_H_l = self.qp_rhs_H_l()\n",
+    "        q_rhs_H_l = qp_rhs_H_l[:state_dim]\n",
+    "        p_rhs_H_l = qp_rhs_H_l[state_dim:]\n",
+    "        \n",
+    "        q_l_dot = gamma*q_rhs_H_mf + (1-gamma)*q_rhs_H_l\n",
+    "        p_mf_dot = p_rhs_H_mf ## assuming the user gives us this but waiting for response from Shen about this\n",
+    "        p_l_dot = -1*p_rhs_H_l\n",
+    "        \n",
+    "        return np.concatenate([q_l_dot, p_mf_dot, p_l_dot])\n",
+    "    \n",
+    "    def qp_rhs_H_l()\n",
+    "\n",
+    "    def p_rhs_H_l(self, q_l, p_l, u_l):\n",
+    "        q_l_dot = \n",
+    "        return q_l_dot\n",
+    "    \n",
+    "    def q_rhs_H_l(self, q_l, p_l, u_l):\n",
+    "        return \n",
+    "    \n",
+    "    def u_rhs():\n",
+    "        pass\n",
+    "    \n",
     "    # Inputs for numerical propagator\n",
     "    q_0 = np.array([0])\n",
     "    p_0 = np.array([0])\n",
@@ -193,7 +225,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### MeanField"
+    "## MeanField"
    ]
   },
   {
@@ -211,14 +243,30 @@
     "    \n",
     "    def H_MF_nou(self, q, p):\n",
     "        pass\n",
-    "        \n",
-    "    def qp_rhs_H_MF_nou(self, t, qp_vec, **kwargs):\n",
-    "        pass\n",
     "\n",
     "    def H_MF_u(self, q, p):\n",
     "        pass\n",
     "        \n",
-    "    def qp_rhs_H_MF_u(self, t, qp_vec, **kwargs):\n",
+    "    def qp_rhs_H_mf(self, t, qp_vec, **kwargs):\n",
+    "        # remember that we want to propagate as much as possible together in the same rhs function for numerical purposes\n",
+    "        \n",
+    "    def q_rhs_H_mf_u(self, t, qp_vec, **kwargs):\n",
+    "        pass\n",
+    "    \n",
+    "    def p_rhs_H_mf(self, q_l, p_mf, p_l, u_l):\n",
+    "        return self.p_rhs_H_mf_u(q_l, p_mf, u_l) + sum([self.p_rhs_H_mf_nou()*u for i,j in zip()])\n",
+    "        pass\n",
+    "\n",
+    "    def p_rhs_H_mf_nou(self, t, qp_vec, **kwargs):\n",
+    "        pass\n",
+    "\n",
+    "    def q_rhs_H_mf_nou(self, t, qp_vec, **kwargs):\n",
+    "        pass\n",
+    "\n",
+    "    def p_rhs_H_mf_nou(self, t, qp_vec, **kwargs):\n",
+    "        pass\n",
+    "    \n",
+    "    def p_rhs_H_mf_u():\n",
     "        pass\n",
     "          "
    ]
@@ -281,7 +329,7 @@
     "            # set difference between all states in all agents, and states in current agent\n",
     "            state_dim_mf = set([agent_i.state_indices for agent_i in self.agents for agent_i.state_indices in agent_i]) - set(agent.state_indices)\n",
     "            # run propagation with keyword arguments state_dim_l, state_dim_mf\n",
-    "            slid\n",
+    "            agent.sliding_window = \n",
     "            qp_vec = self.bb.construct_q_p(agent) # quench the necessary values to be quenched\n",
     "            qp_vec = qp_rhs_H_s_nou(qp_vec)"
    ]
