--- a/Mean_Field.ipynb
+++ b/Mean_Field.ipynb
@@ -38,11 +38,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 183,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-183-f510dd09231f>, line 126)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-183-f510dd09231f>\"\u001b[0;36m, line \u001b[0;32m126\u001b[0m\n\u001b[0;31m    q=qp_vec[]\u001b[0m\n\u001b[0m             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "class Agent:\n",
     "    \n",
@@ -168,32 +177,37 @@
     "        pass\n",
     "\n",
     "    def qp_rhs(self, t, qp_vec, **kwargs):\n",
-    "        # \n",
-    "        q=qp_vec[]\n",
-    "        p=qp_vec[]\n",
+    "        # u_l is constant (because of causality, remember?)\n",
     "\n",
-    "        qp_rhs_H_mf = self.mf.qp_rhs_H_mf()\n",
+    "        q=qp_vec[:state_dim]\n",
+    "        p=qp_vec[state_dim:]\n",
+    "\n",
+    "        qp_rhs_H_mf = self.mf.qp_rhs_H_mf(q_l, p_mf, u_l)\n",
     "        p_rhs_H_mf = qp_rhs_H_mf[:state_dim]\n",
     "        q_rhs_H_mf = qp_rhs_H_mf[state_dim:]\n",
     "        \n",
-    "        qp_rhs_H_l = self.qp_rhs_H_l()\n",
+    "        qp_rhs_H_l = self.qp_rhs_H_l(q_l, p_l, u_l)\n",
     "        q_rhs_H_l = qp_rhs_H_l[:state_dim]\n",
     "        p_rhs_H_l = qp_rhs_H_l[state_dim:]\n",
     "        \n",
-    "        q_l_dot = gamma*q_rhs_H_mf + (1-gamma)*q_rhs_H_l\n",
-    "        p_mf_dot = p_rhs_H_mf ## assuming the user gives us this but waiting for response from Shen about this\n",
+    "        q_l_dot = self.gamma*q_rhs_H_mf + (1-self.gamma)*q_rhs_H_l\n",
+    "        p_mf_dot = p_rhs_H_mf\n",
     "        p_l_dot = -1*p_rhs_H_l\n",
     "        \n",
-    "        return np.concatenate([q_l_dot, p_mf_dot, p_l_dot])\n",
+    "        return np.concatenate([q_l_dot, p_l_dot, p_mf_dot])\n",
     "    \n",
-    "    def qp_rhs_H_l()\n",
-    "\n",
+    "    def qp_rhs_H_l(self, q_l, p_l, u_l):\n",
+    "        q_rhs_H_l = self.q_rhs_H_l(q_l, p_l, u_l)\n",
+    "        p_rhs_H_l = self.p_rhs_H_l(q_l, p_l, u_l)\n",
+    "        return [q_rhs_H_l, p_rhs_H_l]\n",
+    "        \n",
     "    def p_rhs_H_l(self, q_l, p_l, u_l):\n",
-    "        q_l_dot = \n",
+    "        q_l_dot =  q_l, p_l, u_l \n",
     "        return q_l_dot\n",
     "    \n",
     "    def q_rhs_H_l(self, q_l, p_l, u_l):\n",
-    "        return \n",
+    "        p_l_dot =  q_l + p_l+u_l\n",
+    "        return p_l_dot\n",
     "    \n",
     "    def u_rhs():\n",
     "        pass\n",
@@ -247,21 +261,33 @@
     "    def H_MF_u(self, q, p):\n",
     "        pass\n",
     "        \n",
-    "    def qp_rhs_H_mf(self, t, qp_vec, **kwargs):\n",
+    "    def qp_rhs_H_mf(self, ):\n",
     "        # remember that we want to propagate as much as possible together in the same rhs function for numerical purposes\n",
-    "        \n",
-    "    def q_rhs_H_mf_u(self, t, qp_vec, **kwargs):\n",
-    "        pass\n",
+    "        # remember that q_rhs here is w.r.t p_mf but p_rhs here is w.r.t q_l\n",
+    "        q_H_mf_dot = self.p_rhs_H_mf(q_l, p_mf, p_l, u_l)\n",
+    "        p_H_mf_dot = self.q_rhs_H_mf(q_l, p_mf, u_l)\n",
+    "        return np.concatenate([q_H_mf_dot, p_H_mf_dot])\n",
     "    \n",
-    "    def p_rhs_H_mf(self, q_l, p_mf, p_l, u_l):\n",
-    "        return self.p_rhs_H_mf_u(q_l, p_mf, u_l) + sum([self.p_rhs_H_mf_nou()*u for i,j in zip()])\n",
+    "    def q_rhs_H_mf(self, q_l, p_mf, u_l):\n",
+    "        p_H_mf_dot = self.q_rhs_H_mf_nou(q_l, p_mf, u_l) + sum(self.q_rhs_H_mf_u(q_l, p_mf)*u for i,j in zip())\n",
+    "        return p_H_mf_dot\n",
+    "        \n",
+    "    def q_rhs_H_mf_u(self, q_l, p_mf):\n",
+    "        # there should be one ofthese for each control variable\n",
+    "        p_H_mf_u_dot_1 = q_l[0] + p_mf # or something\n",
+    "        p_H_mf_u_dot_2 = q_l[1] + p_mf # or something\n",
+    "        return np.concate([p_H_mf_u_dot_1, p_H_mf_u_dot_2])\n",
+    "    \n",
+    "    def p_rhs_H_mf(self, q_l, p_mf, u_l):\n",
+    "        return self.p_rhs_H_mf_nou(q_l, p_mf, u_l) + sum([self.p_rhs_H_mf_u(q_l, p_mf)*u for i,j in zip()])\n",
+    "\n",
+    "    def p_rhs_H_mf_nou(self, q_l, p_mf, u_l):\n",
     "        pass\n",
     "\n",
-    "    def p_rhs_H_mf_nou(self, t, qp_vec, **kwargs):\n",
-    "        pass\n",
-    "\n",
-    "    def q_rhs_H_mf_nou(self, t, qp_vec, **kwargs):\n",
-    "        pass\n",
+    "    def q_rhs_H_mf_nou(self, q_l, p_mf, u_l):\n",
+    "        p_H_mf_nou_dot_1 = q_l[0] + p_mf*u_l\n",
+    "        p_H_mf_nou_dot_2 = q_l[1] + p_mf*u_l\n",
+    "        return np.concatenate([p_H_mf_nou_dot_1, p_H_mf_nou_dot_2])\n",
     "\n",
     "    def p_rhs_H_mf_nou(self, t, qp_vec, **kwargs):\n",
     "        pass\n",
