Started writing a small test for testing what we have so far for the Agent class.

--- a/Mean_Field.ipynb
+++ b/Mean_Field.ipynb
@@ -38,20 +38,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 185,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-183-f510dd09231f>, line 126)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-183-f510dd09231f>\"\u001b[0;36m, line \u001b[0;32m126\u001b[0m\n\u001b[0;31m    q=qp_vec[]\u001b[0m\n\u001b[0m             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Agent:\n",
     "    \n",
@@ -178,9 +169,10 @@
     "\n",
     "    def qp_rhs(self, t, qp_vec, **kwargs):\n",
     "        # u_l is constant (because of causality, remember?)\n",
-    "\n",
-    "        q=qp_vec[:state_dim]\n",
-    "        p=qp_vec[state_dim:]\n",
+    "        u_l = kwargs['u_l']\n",
+    "        q_l = qp_vec[:state_dim]\n",
+    "        p_l = qp_vec[state_dim:2*state_dim]\n",
+    "        p_mf = qp_vec[2*state_dim:]\n",
     "\n",
     "        qp_rhs_H_mf = self.mf.qp_rhs_H_mf(q_l, p_mf, u_l)\n",
     "        p_rhs_H_mf = qp_rhs_H_mf[:state_dim]\n",
@@ -206,11 +198,11 @@
     "        return q_l_dot\n",
     "    \n",
     "    def q_rhs_H_l(self, q_l, p_l, u_l):\n",
-    "        p_l_dot =  q_l + p_l+u_l\n",
+    "        p_l_dot =  q_l + p_l + u_l\n",
     "        return p_l_dot\n",
     "    \n",
-    "    def u_rhs():\n",
-    "        pass\n",
+    "    def u_rhs(self, t, u_vec, **kwargs):\n",
+    "        return -1*Gamma*np.zeros(np.shape(u_vec)) \n",
     "    \n",
     "    # Inputs for numerical propagator\n",
     "    q_0 = np.array([0])\n",
@@ -595,6 +587,22 @@
    "metadata": {},
    "source": [
     "### What things we need in the blackboard:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Try a very small test"
    ]
   },
   {
